--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.App-h1 {
+  color: purple;
+  text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -15,7 +20,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
